llvm/test/tools/llubi/call_mismatched_signature.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define i32 @foo() {
  ret i32 42
}

define void @main() {
  call void @foo()
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: Indirect call through a function pointer with mismatched signature.
; CHECK-NEXT: error: Execution of function 'main' failed.
